Employee and Driver edit resolve

--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -396,7 +396,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-6">
                 <input type="submit" value="Save" class="btn btn-success" /> &nbsp;
-                @Html.ActionLink("Back to List", "Index", "Employees", null, new { @class = "btn btn-info" })
+                @Html.ActionLink("Back to List", "GetAllEmployee", "Employees", null, new { @class = "btn btn-info" })
             </div>
         </div>
         <div class="form-group row">
