--- a/RMS.App/Views/Employees/CreateDriver.cshtml
+++ b/RMS.App/Views/Employees/CreateDriver.cshtml
@@ -81,14 +81,23 @@
 
                             <div class="form-group row">
 
-                                @Html.LabelFor(model => model.ContactNo, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.ContactNo, htmlAttributes: new {@class = "control-label col-md-3"})
                                 <div class="col-md-9">
-                                    @Html.EditorFor(model => model.ContactNo, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Mobile No" } })
-                                    @Html.ValidationMessageFor(model => model.ContactNo, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.ContactNo, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Mobile No"}})
+                                    @Html.ValidationMessageFor(model => model.ContactNo, "", new {@class = "text-danger"})
                                     <p class="text-danger">@ViewBag.Message2</p>
                                 </div>
                             </div>
 
+                            <div class="form-group row">
+
+                                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-3" })
+                                <div class="col-md-9">
+                                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Email" } })
+                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                    <p class="text-danger">@ViewBag.Message2</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group row">
@@ -328,7 +337,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-6">
                         <input type="submit" value="Save" class="btn btn-success" /> &nbsp;
-                        @Html.ActionLink("Back to List", "Index", "Employees", null, new { @class = "btn btn-info" })
+                        @Html.ActionLink("Back to List", "GetAllDriver", "Employees", null, new { @class = "btn btn-info" })
                     </div>
                 </div>
                 <div class="form-group row">
