--- a/RMS.App/Views/Employees/GetAllDriver.cshtml
+++ b/RMS.App/Views/Employees/GetAllDriver.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RMS.App.ViewModels.EmployeeViewModel>
+﻿@model IEnumerable<RMS.App.ViewModels.DriverViewModel>
 
 @{
     ViewBag.Title = "Driver List";
@@ -25,7 +25,7 @@
         <div class="row align-items-center">
             <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
                 <p>
-                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
+                    @Html.ActionLink("Create New", "CreateDriver", null, new { @class = "btn btn-success" })
                 </p>
             </div>
 
@@ -53,28 +53,28 @@
                         @Html.DisplayNameFor(model => model.FullName)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.ContactNo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Email)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.NID)
-                    </th>
-                    <th>
                         @Html.DisplayNameFor(model => model.DesignationId)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.DepartmentId)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.OrganizationId)
+                        @Html.DisplayNameFor(model => model.ContactNo)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.DrivingLicence)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.BloodGroup)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NID)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DepartmentId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrganizationId)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.EmployeeTypeId)
@@ -100,22 +100,10 @@
                                     @Html.DisplayFor(modelItem => item.FullName)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.ContactNo)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Email)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.NID)
-                                </td>
-                                <td>
                                     @Html.DisplayFor(modelItem => item.Designation.Title)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Department.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Organization.Name)
+                                    @Html.DisplayFor(modelItem => item.ContactNo)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.DrivingLicence)
@@ -124,10 +112,23 @@
                                     @Html.DisplayFor(modelItem => item.BloodGroup)
                                 </td>
                                 <td>
+                                    @Html.DisplayFor(modelItem => item.NID)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Email)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Department.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Organization.Name)
+                                </td>
+                                
+                                <td>
                                     @Html.DisplayFor(modelItem => item.EmployeeType.Type)
                                 </td>
                                 <td class="text-right">
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                                    @Html.ActionLink("Edit", "EditDriver", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
                                     @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
 
                                 </td>
@@ -151,28 +152,28 @@
                         @Html.DisplayNameFor(model => model.FullName)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.ContactNo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Email)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.NID)
-                    </th>
-                    <th>
                         @Html.DisplayNameFor(model => model.DesignationId)
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.DepartmentId)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.OrganizationId)
+                        @Html.DisplayNameFor(model => model.ContactNo)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.DrivingLicence)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.BloodGroup)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NID)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.DepartmentId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrganizationId)
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.EmployeeTypeId)
