--- a/RMS.App/Views/AssignRequisitions/OnProcess.cshtml
+++ b/RMS.App/Views/AssignRequisitions/OnProcess.cshtml
@@ -4,43 +4,171 @@
     ViewBag.Title = "OnProcess";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
 
-<h2>On Execute</h2>
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.StatusType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequisitionNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequisitionId)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.StatusType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequisitionNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RequisitionId)
-        </td>
-        <td>
-            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |*@
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @*@Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
-
-            @Html.ActionLink("Check In", "CheckIn", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
-
-        </td>
-    </tr>
 }
+<div class="container">
+<h2>On Process</h2>
 
-</table>
+    @if (TempData["msg"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg"])
+        </div>
+    }
+    @if (TempData["msg1"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg1"])
+        </div>
+    }
+
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: auto">
+        <thead>
+            <tr class="bg-info">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StatusType)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+
+        </thead>
+        <tbody>
+            @{
+                var sl = 0;
+                if (Model.Count() != 0)
+                {
+                    foreach (var item in Model)
+                    {
+                        sl++;
+                        <tr>
+                            <td>
+                                @sl
+
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.RequisitionNumber)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.Employee.FullName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.FromPlace)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.DestinationPlace)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.StartDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.EndDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusType, new { @class = "text-danger" })
+                            </td>
+                            <td>
+                                @*@Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}) |*@
+                                @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-primary" }) |
+                                @*@Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})*@
+                                @Html.ActionLink("CheckIn", "CheckIn", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
+
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
+                    </tr>
+                }
+            }
+        </tbody>
+        <tfoot>
+            <tr class="bg-secondary text-white">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StatusType)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
