--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -1,108 +1,57 @@
-﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
+﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
-    ViewBag.Title = "Check-In List";
+    ViewBag.Title = "Check-Out";
 }
-@section styles
-{
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet"/>
-    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet"/>
 
+<h2>Check-Out</h2>
+<hr />
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-md-2"></div>
+            <div class="col-md-5">
+                <input type="submit" value="Check In" class="btn btn-success" /> &nbsp;
+                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+            </div>
+        </div>
+    </div>
 }
-<h2>Check-In List</h2>
-<hr/>
 
-<table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
-    <thead>
-        <tr class="bg-info">
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionId)
-            </th>
-            <th class="text-center">
-                Action
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-    @{
-        var sl = 0;
-        if (Model.Count() != 0)
-        {
 
-            foreach (var item in Model)
-            {
-                sl++;
-                <tr>
-                    <td>
-                        @sl
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.StatusType)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RequisitionNumber)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RequisitionId)
-                    </td>
-                    <td class="text-right">
-                        @Html.ActionLink("CheckIn", "Edit", new { id = item.Id },new {@class="btn btn-primary"})
 
-                    </td>
-                </tr>
-            }
-        }
-        else
-        {
-            <tr>
-                <td class="text-center text-danger" colspan="5"> Data Not Found!</td>
-            </tr>
-        }
-    }
-    </tbody>
-    <tfoot>
-        <tr class="badge-secondary text-white">
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionId)
-            </th>
-            <th class="text-center">
-                Action
-            </th>
-        </tr>
-    </tfoot>
-</table>
-@section scripts
-{
-
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
-
-    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('#example').DataTable();
-        });
-    </script>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
