--- a/RMS.App/Views/RequisitionStatus/Index.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Index.cshtml
@@ -1,113 +1,160 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Requisition Status List";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @section styles
 {
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
 
-    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
 }
 <div class="container">
+    <h2>Assigned Requisition</h2>
+    <hr />
 
-    <h2>Requisition Status List</h2>
-    <hr/>
-
-    @*<div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
-                <p></p>
-            </div>
-
-            <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "RequisitionStatus", FormMethod.Get))
-                    {
-
-                        <b>Search by (Requisition Number) </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-
-                    }
-                </p>
-
-            </div>
+    @if (TempData["msg"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg"])
         </div>
-    </div>*@
+    }
+    @if (TempData["msg1"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg1"])
+        </div>
+    }
 
-    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: auto">
         <thead>
-        <tr class="bg-info">
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusType)
-            </th>
-            <th class="text-center">
-                Action
-            </th>
-        </tr>
+            <tr class="bg-info">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StatusType)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+
         </thead>
         <tbody>
-        @{
-            var sl = 0;
-            if (Model.Count() != 0)
-            {
-                foreach (var item in Model)
+            @{
+                var sl = 0;
+                if (Model.Count() != 0)
                 {
-                    sl++;
+                    foreach (var item in Model)
+                    {
+                        sl++;
+                        <tr>
+                            <td>
+                                @sl
 
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.RequisitionNumber)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.Employee.FullName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.FromPlace)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.DestinationPlace)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.StartDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.EndDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusType, new { @class = "text-danger" })
+                            </td>
+                            <td>
+                                @*@Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}) |*@
+                                @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-primary" }) |
+                                @*@Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})*@
+                                @Html.ActionLink("CheckOut", "CheckOut", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
+
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
                     <tr>
-                        <td>
-                            @sl
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RequisitionNumber)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusType)
-                        </td>
-                        <td class="text-right">
-                            @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new { @class = "btn btn-warning btn-sm" })
-                            @Html.ActionLink("Details", "Details", new {id = item.Id}, new { @class = "btn btn-primary btn-sm" })
-                            @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new { @class = "btn btn-outline-danger btn-sm" })
-                        </td>
+                        <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
                     </tr>
                 }
             }
-            else
-            {
-                <tr>
-                    <td class="text-center text-danger" colspan="4"> Data Not Found!</td>
-                </tr>
-            }
-        }
         </tbody>
         <tfoot>
-        <tr class="bg-secondary text-white">
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusType)
-            </th>
-            <th class="text-center">
-                Action
-            </th>
-        </tr>
+            <tr class="bg-secondary text-white">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StatusType)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
         </tfoot>
-
     </table>
 </div>
 
