--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -253,23 +253,9 @@
     <script src="~/Content/js/mail-script.js"></script>
     <script src="~/Scripts/chosenDD/chosen.jquery.min.js"></script>
     <script src="~/Content/js/main.js"></script>
+    <script src="~/Scripts/RequiredFieldsAsteriskJs/RequiredFieldAsterisk.js"></script>
 
-    <!--Display an asterisk on required fields-->
-<script type="text/javascript">
-        $('input[type=text]').each(function () {
-            var req = $(this).attr('data-val-required');
-            if (undefined != req) {
-                var label = $('label[for="' + $(this).attr('id') + '"]');
-                var text = label.text();
-                if (text.length > 0) {
-                    label.append('<span style="color:red"> *</span>');
-                }
-            }
-        });
-    </script>
-
-
-@RenderSection("scripts", required: false)
+    @RenderSection("scripts", required: false)
     
 </body>
 </html>
