--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -345,25 +345,15 @@
     <div id="menu5" class="tab-pane fade">
         <div class="form-horizontal">
             <h3 class="col-md-offset-3">Employee Image</h3><br/>
-            <div class="form-group row">
-                <div class="col-md-5">
-                    <div class="btn btn-default" >
-                        <input type="file" id="imageBrowse" />
-                    </div>
+            <div class="form-group row" hidden="hidden">
+                @Html.LabelFor(model => model.EmployeeImageId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.TextBoxFor(model => model.EmployeeImageId, null, new { @class = "form-control", @id = "empImageId" })
+                    @Html.ValidationMessageFor(model => model.EmployeeImageId, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-md-5">
-                    <div id="imgPreview" class="thumb" style="display: none;">
-                        <img class="img-responsive img-thumbnail" id="targetImg" style="width: 160px; height: 160px;"/>
-                        <div class="caption">
-                            <p id="imgDescription"></p>
-                            <a href="#" onclick="ClearPreview()" class="btn btn-sm btn-outline-danger"><i class="fa fa-trash-o"></i> Remove</a>
-
-                        </div>
-
-                    </div>
-                </div>
-                
             </div>
+            <!--Image Partial View-->
+            @Html.Partial("_ImageUpload")
         </div>
 
         <div class="form-group row">
