Contact done with reply and Email Sent after Register Employee

--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -229,7 +229,7 @@
     </div>
 </div>
 
-<!--My rrequest Request -->
+<!--My request Request -->
 <div class="modal fade" id="myRequest">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
