--- a/RMS.App/Views/Home/Contact.cshtml
+++ b/RMS.App/Views/Home/Contact.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using System.Web.Mvc.Html
+@model RMS.App.ViewModels.ContactViewModel
+@{
     ViewBag.Title = "Contact";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
@@ -42,6 +44,66 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br/>
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+
+        @if (TempData["msg"] != null)
+        {
+            <div class="alert alert-info">
+                @Html.Raw(TempData["msg"])
+            </div>
+        }
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group row">
+
+            @Html.LabelFor(model => model.Email, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-6">
+                @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
+                <p class="text-danger">@ViewBag.Message1</p>
+            </div>
+
+        </div>
+
+        <div class="form-group row">
+
+            @Html.LabelFor(model => model.PhoneNo, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-6">
+                @Html.EditorFor(model => model.PhoneNo, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.PhoneNo, "", new {@class = "text-danger"})
+                <p class="text-danger">@ViewBag.Message1</p>
+            </div>
+
+        </div>
+
+
+        <div class="form-group row">
+
+            @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-6">
+                @Html.TextArea("Message", "This is Message", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.Message1</p>
+            </div>
+
+        </div>
+
+
+        <div class="form-group row">
+            <div class="control-label col-md-2 "></div>
+            <div class="col-md-6 ">
+                <input type="submit" value="Send" class="btn btn-success" /> &nbsp;
+                @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" })
+
+            </div>
+        </div>
+    </div>
+}
