Driver image uploaded completed

--- a/RMS.App/Views/Employees/Delete.cshtml
+++ b/RMS.App/Views/Employees/Delete.cshtml
@@ -26,10 +26,10 @@
                 </tr>
                 <tr>
                     <td class="col-md-2-custom" style="width: 20%">
-                        @Html.DisplayNameFor(model => model.EmployeeTypeId)
+                        @Html.DisplayNameFor(model => model.DesignationId)
                     </td>
                     <td style="width: 80%">
-                        @Html.DisplayFor(model => model.EmployeeType.Type)
+                        @Html.DisplayFor(model => model.Designation.Title)
                     </td>
                 </tr>
                 <tr>
