--- a/RMS.App/Views/Employees/EditDriver.cshtml
+++ b/RMS.App/Views/Employees/EditDriver.cshtml
@@ -101,30 +101,77 @@
         <div class="col-md-8">
             <br/>
             <div class="form-group row">
-                @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new {@class = "control-label col-md-3 required" })
-                <div class="col-md-9">
-                    @Html.DropDownList("OrganizationId", null, htmlAttributes: new {@class = "form-control", @id= "searchableDD2" })
+                @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new {@class = "control-label col-md-4 required"})
+                <div class="col-md-8">
+                    @Html.DropDownList("OrganizationId", null, htmlAttributes: new {@class = "form-control", @id = "searchableDD2"})
                     @Html.ValidationMessageFor(model => model.OrganizationId, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new {@class = "control-label col-md-3 required" })
-                <div class="col-md-9">
-                    @Html.DropDownList("DepartmentId", null, htmlAttributes: new {@class = "form-control", @id= "searchableDD3" })
+                @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new {@class = "control-label col-md-4 required"})
+                <div class="col-md-8">
+                    @Html.DropDownList("DepartmentId", null, htmlAttributes: new {@class = "form-control", @id = "searchableDD3"})
                     @Html.ValidationMessageFor(model => model.DepartmentId, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.DesignationId, htmlAttributes: new {@class = "control-label col-md-3 required" })
-                <div class="col-md-9">
-                    @Html.DropDownList("DesignationId", null, htmlAttributes: new {@class = "form-control",@id= "searchableDD4" })
+                @Html.LabelFor(model => model.DesignationId, htmlAttributes: new {@class = "control-label col-md-4 required"})
+                <div class="col-md-8">
+                    @Html.DropDownList("DesignationId", null, htmlAttributes: new {@class = "form-control", @id = "searchableDD4"})
                     @Html.ValidationMessageFor(model => model.DesignationId, "", new {@class = "text-danger"})
                 </div>
             </div>
         </div>
     </div>
+        <br />
+        <div class="row border">
+            <div class="col-md-12">
+                <br />
+                <h3 class="col-md-offset-3">Driver Image</h3><br />
+            </div>
+            <div class="col-md-12">
+                <div class="form-horizontal row">
+                    <div class="col-md-4">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-10">
+                            @if (Model.EmployeeImageId > 0)
+                            {
+                                <img src="@Url.Action("RetriveImage", "EmployeeImages", new {@imgId = Model.EmployeeImageId})" class="img-responsive img-thumbnail" style="width: 150px; height: 150px !important;" />
+                                <br /><br />
+                                @*using (Html.BeginForm("DeleteImage", "EmployeeImages", FormMethod.Post))
+                                {
+                                    <a href="@Url.Action("DeleteImage","EmployeeImages",new {@id=Model.EmployeeImageId})" class="btn btn-outline-danger btn-sm">Delete</a>
+                                }*@
+
+                            }
+                            else
+                            {
+                                <img src="~/Content/img/EmpImg.gif" style="width: 150px; height: 150px !important; border: 1px solid #808080" />
+                            }
+                        </div>
+                        <br />
+                    </div>
+                    <div class="col-md-8">
+                        <h3> Upload new image</h3>
+                        <div hidden="hidden">
+                            @Html.LabelFor(model => model.EmployeeImageId, htmlAttributes: new { @class = "control-label col-md-4" })
+                            <div class="col-md-6">
+                                @Html.TextBoxFor(model => model.EmployeeImageId, null, new { @class = "form-control", @id = "empImageId" })
+                                @Html.ValidationMessageFor(model => model.EmployeeImageId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <!--Image Partial View-->
+
+                        <br />
+                        @Html.Partial("_ImageUpload")
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     <br/>
     @if (Model.Addresses.Count() != 0)
     {
@@ -486,4 +533,5 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Scripts/AddressJs/EditEmployeeAddress.js"></script>
     <script src="~/Scripts/chosenDD/chosen_DD.js"></script>
+    <script src="~/Scripts/ImageUploadJs/ImageUpload.js"></script>
 }
