--- a/RMS.App/Views/Shared/_ImageUpload.cshtml
+++ b/RMS.App/Views/Shared/_ImageUpload.cshtml
@@ -1,6 +1,7 @@
 ﻿
 <div class="form-group row">
     <div class="col-md-5">
+        <p class="text-danger font-weight-normal"> Image less or equal [(300 * 300 PX), 100 KB and JPEG/PNG ]</p>
         <div class="btn btn-default">
             <input type="file" id="imageBrowse"/>
         </div>
