Image alert change

--- a/RMS.App/Views/Shared/_ImageUpload.cshtml
+++ b/RMS.App/Views/Shared/_ImageUpload.cshtml
@@ -26,3 +26,6 @@
     </div>
 
 </div>
+<div id="dialog" title="Image input warning!">
+    <p class="text-danger fa fa-warning"> Your input image not as required! <br /> Please input a valid image!</p>
+</div>
