--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -100,10 +100,22 @@
                 </div>
             </div>
             <div class="form-group row">
-                @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
+                @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-8">
-                    @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" ,@readOnly="readonly"} })
-                    @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.RequisitionNumber, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                    @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new {@class = "text-danger"})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.LabelFor(model => model.RequisitionType, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
+
+                    @Html.RadioButtonFor(model => model.RequisitionType, "Official", new { @checked = "checked" }) Official
+                    &nbsp; &nbsp; &nbsp;
+
+                    @Html.RadioButtonFor(model => model.RequisitionType, "Personal") Personal
+
+                    @Html.ValidationMessageFor(model => model.RequisitionType, "", new { @class = "text-danger" })
                 </div>
             </div>
 
